[b]Version 0.6.0rc5[/b]:

(2008-04-25)
 * Added a new widget (a line edit + a button) which allows the user to
   select a file or directory. The preferences dialog now uses this widget.

(2008-04-23)
 * Fix loading idx/sub subtitles. The filename was incorrectly passed to 
   mplayer if it contained several dots. 

(2008-04-22)
 * Now smplayer can detect if mplayer has been patched with the 
   startupvol patch. Autodetection will only succeed if mplayer has been
   patched with this 2nd version of the patch: 
   http://smplayer.svn.sourceforge.net/viewvc/*checkout*/smplayer/mplayer-builds/patches/startupvol-2.diff
 * Now the option "Change volume just before playing" in 
   Preferences->General->Audio can be set to "Auto".

(2008-04-20)
 * Added a preferences dialog for the playlist.

(2008-04-19)
 * Don't get info about the files added automatically by the GUI to the 
   playlist (usually it's the file to play, so it's a waste of time).
 * Added possibility to add directories recursively to the playlist. Right
   now it's necessary to edit smplayer.ini and set recursive_add_directory to
   true (inside [playlist] section). Soon there'll be an option for this 
   in the GUI.

(2008-04-18)
 * (Windows) Applied a patch by "hackykid" to fix a link error when compiling with
   Visual Studio.
   http://sourceforge.net/tracker/index.php?func=detail&aid=1924296&group_id=185512&atid=913575

(2008-04-17)
 * Updated the Italian and Polish translations.
 * (Bugfix) If the option to start videos in fullscreen is activated, now
   fullscreen mode will be entered only when the video is opened, and not for
   instance when you unpause the video.
 * (Windows) Added the exit fullscreen and close actions to the floating
   control widget, so their key shortcuts can work in the floating control.

(2008-04-16)
 * Now the mouse right click button can be configured. By default it will
   show the context menu. The context menu can also be assigned to another
   button (or key).